add delete handler
