# src/api/routers/country.go
@@ -15,5 +15,5 @@ func Country(r *gin.RouterGroup) {
 
 	r.POST("/c/create", middlewares.Authentication(cfg), handler.Create)
 	r.PUT("/c/update", middlewares.Authentication(cfg), handlerUpdate.Update)
-	r.DELETE("/c/delete", middlewares.Authentication(cfg), handlerDelete.Delete)
+	r.PUT("/c/delete", middlewares.Authentication(cfg), handlerDelete.Delete)
 }
